# NPCore

./: .gitignore  API.md  BUILD.md  CMakeLists.txt  README.md
Corepp/: Autograd.h  Core.h  CorePP.h  DataLoader.cpp  DataLoader.h  Loss.h  Model.h  NN.h  Optim.h
Corepp/Activations/: Activation.cpp  Activation.h
Corepp/Core/: Assert.h  ConvUtils.h  CudaBridge.h  GEMM.h  LinearAlgebra.h  Matrix.hpp  Matrix.inl  RandomGenerator.cpp  RandomGenerator.h  Size.h
Corepp/Cuda/: cuda_gemm.cu  cuda_runtime.h
Corepp/Layers/: Activation.cpp  Activation.h  Conv2d.cpp  Flatten.cpp  Flatten.h  GELU.h  GRU.cpp  GRU.h  LSTM.cpp  LSTM.h  Linear.cpp  Module.cpp  Module.h  ParamInit.h  RNN.cpp  RNN.h  ResNetBlock.h  Residual.h  Sequence.cpp  Sequence.h
Corepp/Layers/Architecture/: ResNetBlock.h
Corepp/Layers/Attention/: MultiHeadAttention.h
Corepp/Layers/Basic/: Dropout.h  Embedding.h  Flatten.cpp  Flatten.h  Linear.cpp  Linear.h
Corepp/Layers/Conv/: Conv2d.cpp  Conv2d.h  ConvTranspose2d.h  Pool.h
Corepp/Layers/Normalization/: BatchNorm.h  GroupNorm.h  LayerNorm.h
Corepp/Layers/Recurrent/: GRU.cpp  GRU.h  LSTM.cpp  LSTM.h  RNN.cpp  RNN.h
Corepp/Losses/: Loss.h
Corepp/Optimizers/: Adadelta.h  Adagrad.h  Adam.h  AdamW.h  GradientClipping.h  LRScheduler.h  Momentum.h  NAdam.h  Optimizer.cpp  Optimizer.h  RAdam.h  RMSProp.h  SGD.h
Corepp/Utils/: Timer.cpp  Timer.h
NPCore/: Autograd.cpp  Autograd.h  Core.h  DataLoader.cpp  DataLoader.h  Model.cpp  Model.h  NN.h  NPCore.h  Optim.h
NPCore/Activations/: Activation.cpp  Activation.h
NPCore/Core/: Assert.h  ConvUtils.cpp  ConvUtils.h  CudaBridge.cpp  CudaBridge.h  Export.h  GEMM.cpp  GEMM.h  LinearAlgebra.cpp  LinearAlgebra.h  Matrix.cpp  Matrix.hpp  Matrix.inl  RandomGenerator.cpp  RandomGenerator.h  Size.cpp  Size.h
NPCore/Cuda/: cuda_device.cu  cuda_elementwise.cu  cuda_rnn.cu  cuda_runtime.h
NPCore/Layers/: Module.cpp  Module.h  ParamInit.cpp  ParamInit.h  Sequence.cpp  Sequence.h
NPCore/Layers/Architecture/: ResNetBlock.cpp  ResNetBlock.h  Residual.cpp  Residual.h
NPCore/Layers/Attention/: MultiHeadAttention.cpp  MultiHeadAttention.h  PositionalEncoding.cpp  PositionalEncoding.h  TransformerEncoder.cpp  TransformerEncoder.h
NPCore/Layers/Basic/: Concat.cpp  Concat.h  Dropout.cpp  Dropout.h  Embedding.cpp  Embedding.h  Flatten.cpp  Flatten.h  Linear.cpp  Linear.h
NPCore/Layers/Conv/: Conv1d.cpp  Conv1d.h  Conv2d.cpp  Conv2d.h  ConvTranspose2d.cpp  ConvTranspose2d.h  Pool.cpp  Pool.h
NPCore/Layers/Normalization/: BatchNorm.cpp  BatchNorm.h  GroupNorm.cpp  GroupNorm.h  InstanceNorm.cpp  InstanceNorm.h  LayerNorm.cpp  LayerNorm.h  NormLayerBase.cpp  NormLayerBase.h
NPCore/Layers/Recurrent/: GRU.cpp  GRU.h  LSTM.cpp  LSTM.h  RNN.cpp  RNN.h
NPCore/Losses/: Loss.cpp  Loss.h
NPCore/Optimizers/: Adadelta.h  Adagrad.h  Adam.h  AdamW.cpp  AdamW.h  GradientClipping.cpp  GradientClipping.h  LRScheduler.cpp  LRScheduler.h  Momentum.h  NAdam.h  Optimizer.cpp  Optimizer.h  OptimizerMethods.cpp  RAdam.h  RMSProp.h  SGD.h
NPCore/Utils/: ONNXModel.cpp  ONNXModel.h  Serializer.cpp  Serializer.h  Timer.h
_build/: CorePPConfig.cmake  NPCoreConfig.cmake  install_manifest.txt
assets/scripts/: draw_architecture.py  draw_convtranspose.py  draw_mha.py  draw_norms.py
cmake/: CompilerSettings.cmake  CorePPConfig.cmake.in  CorePPSources.cmake  InstallRules.cmake  NPCoreConfig.cmake.in  NPCoreSources.cmake
docs/: API.md  BUILD.md  CHANGELOG.md  CUDA.md  CustomModel.md  DataLoader.md  DevGuide.md  Examples.md  Layers.md  ONNX.md  QuickStart.md  ROADMAP.md
examples/: CMakeLists.txt  cnn_test.cpp  dataloader_test.cpp  gru_test.cpp  lstm_test.cpp
examples/architecture/: resnet_test.cpp
examples/attention/: test_mha.cpp  test_transformer.cpp
examples/basic/: CMakeLists.txt  fnn_test.cpp  main.cpp
examples/conv/: cnn_test.cpp  test_conv1d.cpp  test_convtranspose2d.cpp  test_pooling.cpp
examples/data/: dataloader_test.cpp
examples/normalization/: test_batchnorm2d.cpp  test_groupnorm.cpp  test_instancenorm.cpp
examples/onnx/: export_torch_model.py  test_bn.onnx  test_cnn.onnx  test_mlp.onnx  test_onnx.cpp  test_onnx_import.cpp  torch_cnn.onnx  torch_cnn_shapes.txt  verify_onnx.py
examples/optimizers/: test_gradclip.cpp
examples/recurrent/: gru_test.cpp  lstm_test.cpp  rnn_test.cpp
examples/serialize/: test_serialize.cpp
examples/standalone/: CMakeLists.txt  demo.cpp  demo_classifier.cpp
examples/unit/: gradcheck_test.cpp  test_all.cpp  test_losses.cpp  test_nest_concat.cpp  test_trainer.cpp  test_use_bias.cpp
tests/: CMakeLists.txt  bn_test.cpp  cnn_test.cpp  dropout_test.cpp  embed_test.cpp  fnn_test.cpp  gradcheck_test.cpp  gru_test.cpp  lstm_test.cpp  pool_test.cpp  residual_test.cpp  resnet_test.cpp  rnn_test.cpp
